[gd_scene load_steps=8 format=3 uid="uid://cfqrj1yos1m00"]

[ext_resource type="Script" uid="uid://dpn760t452r3n" path="res://scripts/packa_p-m.gd" id="1_fb521"]
[ext_resource type="ArrayMesh" uid="uid://db6fk6jivxbvt" path="res://3d_assets/packa_B_1.obj" id="1_qpadl"]
[ext_resource type="ArrayMesh" uid="uid://bpo6gn2eac1dj" path="res://3d_assets/packa_B_2.obj" id="2_4prpp"]
[ext_resource type="Material" uid="uid://du4bl0gtdxgw4" path="res://materials/arrows.tres" id="4_s0320"]
[ext_resource type="ArrayMesh" uid="uid://dnausrjsaoiiv" path="res://3d_assets/packa_B_3.obj" id="4_xw78q"]
[ext_resource type="Script" uid="uid://u7jgiqndaefn" path="res://scripts/drag_support_packa_b.gd" id="6_s0320"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s0320"]

[node name="PackaB" type="Node3D"]
script = ExtResource("1_fb521")

[node name="base" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_qpadl")

[node name="packa_b" type="MeshInstance3D" parent="base"]
mesh = ExtResource("2_4prpp")

[node name="arrow" type="MeshInstance3D" parent="base"]
visible = false
material_override = ExtResource("4_s0320")
mesh = ExtResource("4_xw78q")

[node name="drag_support" type="Node3D" parent="." node_paths=PackedStringArray("packa_")]
transform = Transform3D(0.111434, 0, 0, 0, 0.0575014, 0, 0, 0, 0.0762716, 0, 0.2475, 0)
script = ExtResource("6_s0320")
packa_ = NodePath("../base/packa_b")

[node name="Area3D" type="Area3D" parent="drag_support"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="drag_support/Area3D"]
shape = SubResource("BoxShape3D_s0320")

[connection signal="paka_pushed" from="drag_support" to="." method="_on_drag_support_paka_pushed"]
[connection signal="mouse_entered" from="drag_support/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="drag_support/Area3D" to="." method="_on_area_3d_mouse_exited"]
